# qt-painter

./: CMakeLists.txt  README.md  circlemodeview.cpp  circlemodeview.h  detail.cpp  detail.h  graphicapp.pro  main.cpp  mainwindow.cpp  mainwindow.h  modificationmodevew.cpp  modificationmodevew.h  modificationmodeview.cpp  modificationmodeview.h  rectanglemodeview.cpp  rectanglemodeview.h  resources.qrc  squaremodeview.cpp  squaremodeview.h  trianglemode.cpp  trianglemode.h  trianglemodeview.cpp  trianglemodeview.h
doc/en/: README-ENG.md
doc/ru/: README-RUS.md
en/: README.md
include/: brush-mode-view.h  brushmodeview.h  circle-mode-view.h  circlemodeview.h  constants.h  custom-graphics-view.h  detail.h  drawing-graphics-view.h  graphics-items-detail.h  graphics-view.h  line-mode-view.h  linemodeview.h  main-window.h  mainwindow.h  modification-mode-view.h  modificationmodeview.h  polygon-interface.h  polygon-mode-view.h  polygoninterface.h  polygonmodeview.h  rect-like-shapes-mode.h  rectangle-mode-view.h  rectanglemodeview.h  rectangles-detail.h  square-mode-view.h  squaremodeview.h  triangle-mode.h  trianglemode.h  welcome-dialog.h
source/: brush-mode-view.cpp  brushmodeview.cpp  circle-mode-view.cpp  circlemodeview.cpp  custom-graphics-view.cpp  detail.cpp  drawing-graphics-view.cpp  graphics-view.cpp  line-mode-view.cpp  linemodeview.cpp  main-window.cpp  mainwindow.cpp  modification-mode-view.cpp  modificationmodeview.cpp  polygon-interface.cpp  polygon-mode-view.cpp  polygoninterface.cpp  polygonmodeview.cpp  rectangle-mode-view.cpp  rectanglemodeview.cpp  rectangles-detail.cpp  square-mode-view.cpp  squaremodeview.cpp  triangle-mode.cpp  trianglemode.cpp  welcome-dialog.cpp
styles/: toolbarbtnstylesheet.qss
ui/: welcome-dialog.ui
